syntax = "proto3";

option go_package = "./pb";

package chat;

import "chat.proto";

message JoinRequest { JoinChat joinchat = 1; }

message JoinResponse { Group group = 1; }

message GroupChatRequest {
  oneof action {
    AppendChat append = 1;
    LikeMessage like = 2;
    UnLikeMessage unlike = 3;
    PrintChat print = 4;
  }
}

message GroupChatResponse { Group group = 1; }

service ChatService {
  rpc JoinGroup(JoinRequest) returns (JoinResponse) {};
  rpc GroupChat(stream GroupChatRequest) returns (stream GroupChatResponse) {};
}